finish update to ExtensionMenu. corretc layout issues. fixes #4072

--- a/src/system/AdminModule/Resources/public/css/style.css
+++ b/src/system/AdminModule/Resources/public/css/style.css
@@ -244,10 +244,8 @@ div.z-admincategorydescription {
 #modulelist i {
     float: left;
     display: block;
-    border: 1px solid #ccc;
     padding: 4px;
     margin-right: 5px;
-    width: 90px;
 }
 
 #modulelist .ui-state-highlight {
